# corvid-agent

./: .biomeignore  .cursorrules  .discord-last-connect  .dockerignore  .env.example  .env.mainnet.example  .gitignore  .gitleaks.toml  .mcp.json  AGENTS.md  ARCHITECTURAL_IMPROVEMENTS.md  BRANCH_PROTECTION_NOTES.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CVE-FIX-HONO.md  GOVERNANCE_IMPLEMENTATION_REQUIRED.md  MESH_NETWORKING.md  PLUGIN_SYSTEM_DESIGN.md  README.md  RELEASE-NOTES.md  SECURITY.md  SECURITY_FIX_REQUIRED.md  VISION.md  answer.md  biome.json  bunfig.toml  codecov.yml  confidence-review.html  corvid-agent.config.ts  docker-compose.yml  fledge.toml  fly.toml  jest.config.js  monitor.html  morning-report-2026-03-05.html  package.json  playwright.config.js  railway.toml  (+7 more)
.claude/: off-limits-repos.txt
.cursor/: mcp.json
.github/: CODEOWNERS  FUNDING.yml  codeql-config.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.specsync/: config.toml  hashes.json  registry.toml
blog/: fledge-introduction.md
cli/: client.ts  config.ts  index.ts  render.ts  utils.ts
client/: README.md  angular.json  package.json  vitest.config.ts
crates/corvid-plugin-api/: Cargo.toml
crates/corvid-sandbox/: Cargo.toml
crates/corvid-sandbox/src/: lib.rs
deploy/: .env.example  Dockerfile  README.md  backup-db.sh  com.corvidlabs.corvid-agent-backup.plist  com.corvidlabs.corvid-agent.plist  com.corvidlabs.port-forward.plist  corvid-agent.newsyslog.conf  corvid-agent.service  daemon.sh  docker-compose.yml  localnet-bridge.sh  run-loop.sh  (+2 more)
(+2321 files in other folders)
