[package]
name = "corvid-plugin-api"
version = "0.1.0"
edition = "2021"
description = "Core trait definitions for Corvid Agent plugins"
license = "MIT"
repository = "https://github.com/CorvidLabs/corvid-agent"

[dependencies]
async-trait = "0.1"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
