[package]
name = "corvid-sandbox"
version = "0.1.0"
edition = "2021"
description = "Secure sandbox runtime for Corvid Agent plugins"
license = "MIT"

[dependencies]
corvid-plugin-api = { path = "../corvid-plugin-api" }
wasmtime = "14.0"
tokio = { version = "1.0", features = ["full", "time"] }
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
